--- a/autoinstall.yaml
+++ b/autoinstall.yaml
@@ -1,9 +1,8 @@
-#cloud-config
 autoinstall:
   version: 1
   identity:
-    hostname: ubuntu-desktop
-    username: local-optimum
+    hostname: greenwebpage
+    username: ubuntu
     password: "$6$ZE4WV3QRJhPUnsNv$BpkTBYjUOxOiWV5sNPYDSitTwxW.3NHLmhRqptzpa8a4KTxGpkvMaSDbyq4PVri9kdpD1t7ldUBgwB6uveObg."
   storage:
     layout:
@@ -24,4 +23,3 @@ autoinstall:
     - curtin in-target -- dpkg -i ./protonvpn-stable-release_1.0.3-3_all.deb
     - curtin in-target -- apt update
     - curtin in-target -- apt install -y proton-vpn-gnome-desktop
-  
